[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dllist"
readme = "README.md"
authors = [{ name = "Brian Ward", email = "bward@flatironinstitute.org" }]
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "dllist.__version__" }

[tool.setuptools]
packages = ["dllist"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["dllist"]

[tool.setuptools.package-data]
"dllist" = ["py.typed"]
