[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dllist"
description = "List the shared libraries loaded by the current process."
readme = "README.md"
authors = [{ name = "Brian Ward", email = "bward@flatironinstitute.org" }]
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Topic :: System",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/wardbrian/dllist"
"Bug Tracker" = "https://github.com/wardbrian/dllist/issues"

[tool.setuptools.dynamic]
version = { attr = "dllist.__version__" }

[tool.setuptools]
packages = ["dllist"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["dllist"]

[tool.setuptools.package-data]
"dllist" = ["py.typed"]
